--- a/1_src/eureka-server/build.gradle
+++ b/1_src/eureka-server/build.gradle
@@ -50,7 +50,7 @@ jib {
 		image = "openjdk:17"
 	}
 	to {
-		image = 'readyoun/config-server:1.0.0'
+		image = 'readyoun/eureka-server:1.0.0'
 	}
 	container {
 		creationTime = "USE_CURRENT_TIMESTAMP"
