--- a/1_src/item-service/build.gradle
+++ b/1_src/item-service/build.gradle
@@ -79,7 +79,7 @@ jib {
         image = "openjdk:17"
     }
     to {
-        image = 'readyoun/config-server:1.0.0'
+        image = 'readyoun/item-service:1.0.0'
     }
     container {
         creationTime = "USE_CURRENT_TIMESTAMP"
