--- a/1_src/config-server/src/main/resources/config/item-service-docker.yaml
+++ b/1_src/config-server/src/main/resources/config/item-service-docker.yaml
@@ -2,14 +2,17 @@ spring:
   application:
     name: item-service
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:tcp://h2-database:1521/test # Docker 네트워크 상의 H2 데이터베이스 URL
-    username: sa
-    password: sa
+#    driver-class-name: org.h2.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:h2:tcp://h2-database:1521/test # Docker 네트워크 상의 H2 데이터베이스 URL
+    url: jdbc:mysql://localhost:3306/itemsvc
+    username: root
+    password: 1234
   jpa:
     hibernate:
       ddl-auto: create
     show-sql: true
+    database-platform: org.hibernate.dialect.MySQLDialect
     properties:
       hibernate:
         format_sql: true
