--- a/1_src/factorialapp/factorial-app-deploy.yaml
+++ b/1_src/factorialapp/factorial-app-deploy.yaml
@@ -25,7 +25,7 @@ spec:
       ######## 03. Graceful shutdown - end ########
       containers:
         - name: factorial
-          image: readyoun/factorial-app-for-k8s:0.0.3
+          image: readyoun/factorial-app:1.0.2
           ######## 04. Lifecycle hook 추가 - start ########
           lifecycle:
             preStop:
