refactor: mod port no

--- a/1_src/factorial-cache-app/docker-compose.yaml
+++ b/1_src/factorial-cache-app/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  your-service:
+  factorial-app:
     environment:
       - API_KEY=${API_KEY}
       - APP_LANGUAGE=${APP_LANGUAGE}
