--- a/1_src/item-service/item-service-deploy.yaml
+++ b/1_src/item-service/item-service-deploy.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: item-service
 spec:
-  replicas: 2  # 고가용성을 위한 복제본 수
+  replicas: 1  # 고가용성을 위한 복제본 수
   selector:
     matchLabels:
       app: item-service
@@ -17,16 +17,16 @@ spec:
     spec:
       containers:
         - name: item-service
-          image: readyoun/item-service:1.0.2  # 도커 이미지
+          image: readyoun/item-service:2.0.0  # 도커 이미지
           ports:
-            - containerPort: 8080  # 서비스 내부 포트
+            - containerPort: 8081  # 서비스 내부 포트
           env:
             - name: SPRING_DATASOURCE_URL
               value: "jdbc:mysql://mysql-service:3306/itemdb"  # MySQL 연결 정보
             - name: SPRING_DATASOURCE_USERNAME
               value: "root"  # MySQL 사용자
             - name: SPRING_DATASOURCE_PASSWORD
-              value: "your-password"  # MySQL 비밀번호
+              value: "1234"  # MySQL 비밀번호
             - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
               value: "http://eureka-server:8761/eureka/"
             - name: SPRING_PROFILES_ACTIVE
@@ -34,12 +34,12 @@ spec:
           readinessProbe:
             httpGet:
               path: /actuator/health  # 헬스 체크 엔드포인트
-              port: 8080
+              port: 8081
             initialDelaySeconds: 15
             periodSeconds: 5
           livenessProbe:
             httpGet:
               path: /actuator/health
-              port: 8080
+              port: 8081
             initialDelaySeconds: 30
             periodSeconds: 10
