--- a/1_src/item-service/build.gradle
+++ b/1_src/item-service/build.gradle
@@ -52,7 +52,7 @@ dependencies {
 
     // Config Server 완 연동을 위한 의존관계 설정
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
-    // bootstrap.yaml 을 사용하기 위한 의존관계 설정
+    //  을 사용하기 위한 의존관계 설정
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
