--- a/1_src/config-server/config-server-deploy.yaml
+++ b/1_src/config-server/config-server-deploy.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: config-server
+  namespace: ku
   labels:
     app: config-server
 spec:
@@ -16,7 +17,7 @@ spec:
     spec:
       containers:
         - name: config-server
-          image: readyoun/config-server:2.0.0
+          image: readyoun/config-server:2.0.5
           ports:
             - containerPort: 8888  # Config Server는 8888 포트 사용
           env:
