--- a/1_src/eureka-server/eureka-server-deploy.yaml
+++ b/1_src/eureka-server/eureka-server-deploy.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: eureka-server
+  namespace: ku
   labels:
     app: eureka-server
 spec:
@@ -16,7 +17,7 @@ spec:
     spec:
       containers:
         - name: eureka-server
-          image: readyoun/eureka-server:2.0.0
+          image: readyoun/eureka-server:2.1.5
           ports:
             - containerPort: 8761  # Eureka는 기본적으로 8761 포트를 사용
           env:
