--- a/1_src/eureka-server/eureka-server-service.yaml
+++ b/1_src/eureka-server/eureka-server-service.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: eureka-service
+  name: eureka-server
+  namespace: ku
   labels:
     app: eureka-server
 spec:
