--- a/1_src/eureka-server/src/main/resources/application.yaml
+++ b/1_src/eureka-server/src/main/resources/application.yaml
@@ -3,6 +3,8 @@ spring:
     name: eureka-server
   profiles:
     active: docker
+  #    activate:
+  #      on-profile: docker
   cloud:
     config:
       uri: http://config-server:8888
