--- a/1_src/factorial-cache-app/src/main/resources/bootstrap-docker.yaml
+++ b/1_src/factorial-cache-app/src/main/resources/bootstrap-docker.yaml
@@ -4,7 +4,7 @@ spring:
     name: factorial-cache
   cloud:
     config:
-      uri: http://config-server:
+      uri: http://config-server:8888
 eureka:
   client:
     serviceUrl:
