--- a/1_src/gateway-server/gateway-server-service.yaml
+++ b/1_src/gateway-server/gateway-server-service.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gateway-service
+  name: gateway-server
+  namespace: ku
   labels:
     app: gateway-server
 spec:
