--- a/1_src/factorial-cache-app/build.gradle
+++ b/1_src/factorial-cache-app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.3.4'
+//    id 'org.springframework.boot' version '3.3.4'
+    id 'org.springframework.boot' version '3.0.3'
     id 'io.spring.dependency-management' version '1.1.6'
     id 'com.google.cloud.tools.jib' version '3.4.0'
 }
@@ -33,7 +34,7 @@ jib {
         image = "openjdk:17"
     }
     to {
-        image = 'readyoun/factorial-cache-app:2.0.0'
+        image = 'readyoun/factorial-cache-app:2.0.3'
     }
     container {
         creationTime = "USE_CURRENT_TIMESTAMP"
