--- a/1_src/item-service/item-service-deploy.yaml
+++ b/1_src/item-service/item-service-deploy.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: item-service
-  namespace: item-service
+  namespace: item
   labels:
     app: item-service
 spec:
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: item-service
-          image: readyoun/item-service:2.0.0  # 도커 이미지
+          image: readyoun/item-service:2.1.7  # 도커 이미지
           ports:
             - containerPort: 8081  # 서비스 내부 포트
           env:
