--- a/1_src/item-service/src/main/resources/application.yaml
+++ b/1_src/item-service/src/main/resources/application.yaml
@@ -3,6 +3,8 @@ server:
 spring:
   application:
     name: item-service
+  profiles:
+    active: local
   cloud:
     config:
       uri: http://localhost:8080
